test/errmsg/zero-size-array.c
// zero-size-array.c
// Array declared to have zero size.

int arr0[0];

// EOF
